package integrado.prog2.entities;

import java.util.ArrayList;
import java.util.List;

public class Categoria extends Base {

    private String nombre;
    private String descripcion;
    private List<Producto> productos;

    public Categoria(Long id, String nombre, String descripcion) {
        super(id);
        this.nombre = nombre;
        this.descripcion = descripcion;
        this.productos = new ArrayList<>();
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getDescripcion() {
        return descripcion;
    }

    public void setDescripcion(String descripcion) {
        this.descripcion = descripcion;
    }

    public List<Producto> getProductos() {
        return productos;
    }

    public void agregarProducto(Producto producto) {
        if (producto != null && !productos.contains(producto)) {
            productos.add(producto);
        }
    }

    public void quitarProducto(Producto producto) {
        productos.remove(producto);
    }

    public boolean tieneProductosActivos() {
        return productos.stream().anyMatch(Producto::isActivo);
    }

    @Override
    public String toString() {
        return "ID: " + getId()
                + " | Categoria: " + nombre
                + " | Descripcion: " + descripcion
                + " | Creada: " + getFechaCreacionFormateada();
    }
}
